[package]
name = "minlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calloop = "0.13.0"
calloop-wayland-source = "0.3.0"
memfd = "0.6.1"
memmap = "0.7.0"
wayland-client = { version = "=0.31.4" }
wayland-protocols-wlr = { version = "=0.1.0", features = ["client"] }
cairo-rs = "0.15.12"
polonius-the-crab = "0.3.1"
chrono = "0.4.22"
xkbcommon = "0.5.0"
pam = "0.7.0"
users = "0.11.0"
wayland-protocols = { version = "=0.32.2", features = ["client", "staging"] }
